# SimNorth

./: .gitignore  README.md  eval_clusters.py  pretrain_lighthouse.py  pyproject.toml  requirements.txt  train.py  train_optuna.py
simnorth/: __init__.py
simnorth/callbacks/: __init__.py  best_metric.py  image_logger.py
simnorth/data/: __init__.py  dataset.py  transforms.py
simnorth/nets/: __init__.py  lighthouse.py  simnorth.py
