[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simnorth"
version = "0.1.0"
description = "SimNorth: contrastive self-supervised learning for ultrasound frames with hypersphere light-house anchors"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "torch>=2.1",
    "torchvision>=0.16",
    "lightning>=2.2",
    "mlflow>=2.10",
    "monai>=1.3",
    "SimpleITK>=2.3",
    "pandas>=2.0",
    "numpy>=1.24",
    "matplotlib>=3.7",
    "pyarrow>=14.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
include = ["simnorth*"]
